--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 # MONGODB (MongoProperties)
 # Authentication database name.
 spring.data.mongodb.database=shop
-spring.data.mongodb.host=localhost
+spring.data.mongodb.host=${OPENSHIFT_MONGODB_DB_HOST}
 # Login password of the mongo server.
 spring.data.mongodb.password=3-5KUWZlPnC4
 # Mongo server port.
-spring.data.mongodb.port=27017
+spring.data.mongodb.port=${OPENSHIFT_MONGODB_DB_PORT}
 # Enable Mongo repositories.
 spring.data.mongodb.repositories.enabled=true
 # Mongo database URI. When set, host and port are ignored.
