--- a/.gitignore
+++ b/.gitignore
@@ -113,3 +113,5 @@ crashlytics.properties
 crashlytics-build.properties
 fabric.properties
 # Created by .ignore support plugin (hsz.mobi)
+
+/webapps/
