--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,6 @@ spring.data.mongodb.uri=mongodb://admin:3-5KUWZlPnC4@${OPENSHIFT_MONGODB_DB_HOST
 spring.data.mongodb.username=admin
 #spring.data.mongodb.authentication-database=
 # Database name.
+
+#AOP
+spring.aop.proxy-target-class=true
