--- a/pom.xml
+++ b/pom.xml
@@ -85,6 +85,14 @@
 			<artifactId>spring-boot-starter-aop</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-thymeleaf</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>4.12</version>
@@ -108,6 +116,8 @@
 			<version>2.2.2</version>
 			<scope>compile</scope>
 		</dependency>
+
+
 	</dependencies>
 	<profiles>
 		<profile>
