--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,8 @@ spring.data.mongodb.username=admin
 #AOP
 spring.aop.proxy-target-class=true
 loader.verbose=false
+
+
+spring.jpa.properties.hibernate.show_sql= true
+logging.level.org.springframework= ERROR
+
