--- a/.npmrc
+++ b/.npmrc
@@ -5,6 +5,7 @@
 ; read `npm help config` for help on the various options
 ;;;;
 
+//This is just a sample commit.
 //Use the below while trying to download NPM inside office.=true
 registry=https://registry.npmjs.org/
 //Leave the below line commented. Just in case you want to download=true
