--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -5,10 +5,10 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "lib": ["es6", "dom"],
-    "mapRoot": "./",
+    "mapRoot": "./dist",
     "module": "es6",
     "moduleResolution": "node",
-    "outDir": "../dist/out-tsc",
+    "outDir": "./dist",
     "sourceMap": true,
     "target": "es5",
     "typeRoots": [
