--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "proxy": "ng serve --proxy-config proxy.conf.json",
+    "proxy": "ng serve --proxy-config proxy.local.conf.json",
+    "proxyr": "ng serve --proxy-config proxy.remote.conf.json",
     "lint": "tslint \"src/**/*.ts\"",
     "test": "ng test",
     "pree2e": "webdriver-manager update --standalone false --gecko false",
