--- a/pom.xml
+++ b/pom.xml
@@ -21,12 +21,14 @@
     <yarnVersion>v0.17.10</yarnVersion>
     <npmVersion>3.10.10</npmVersion>
     <frontEndPluginVersion>1.3</frontEndPluginVersion>
+
+    <spring.test.framework>4.3.8.RELEASE</spring.test.framework>
   </properties>
 
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
-    <version>1.4.2.RELEASE</version>
+    <version>1.5.3.RELEASE</version>
   </parent>
   <repositories>
     <repository>
@@ -108,12 +110,12 @@
       <artifactId>jackson-databind</artifactId>
     </dependency>
     <!-- http://mvnrepository.com/artifact/org.springframework/spring-test -->
-    <dependency>
-      <groupId>org.springframework</groupId>
-      <artifactId>spring-test</artifactId>
-      <version>4.2.6.RELEASE</version>
-      <scope>test</scope>
-    </dependency>
+    <!--<dependency>-->
+      <!--<groupId>org.springframework</groupId>-->
+      <!--<artifactId>spring-test</artifactId>-->
+      <!--<version>${spring.test.framework}</version>-->
+      <!--<scope>test</scope>-->
+    <!--</dependency>-->
     <!-- http://mvnrepository.com/artifact/org.springframework.security/spring-security-test -->
     <dependency>
       <groupId>org.springframework.security</groupId>
@@ -131,7 +133,7 @@
     <dependency>
       <groupId>com.jayway.jsonpath</groupId>
       <artifactId>json-path</artifactId>
-      <version>1.2.0</version>
+      <version>2.2.0</version>
       <scope>test</scope>
     </dependency>
     <dependency>
