--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,18 +1,26 @@
 # MONGODB (MongoProperties)
-# Authentication database name.
-spring.data.mongodb.database=shop
 spring.data.mongodb.host=${OPENSHIFT_MONGODB_DB_HOST}
-# Login password of the mongo server.
-spring.data.mongodb.password=3-5KUWZlPnC4
-# Mongo server port.
-spring.data.mongodb.port=${OPENSHIFT_MONGODB_DB_PORT}
-# Enable Mongo repositories.
-spring.data.mongodb.repositories.enabled=true
-# Mongo database URI. When set, host and port are ignored.
-spring.data.mongodb.uri=mongodb://admin:3-5KUWZlPnC4@${OPENSHIFT_MONGODB_DB_HOST}:${OPENSHIFT_MONGODB_DB_PORT}/
+
 # Login user of the mongo server.
 spring.data.mongodb.username=admin
-#spring.data.mongodb.authentication-database=
+
+# Login password of the mongo server.
+spring.data.mongodb.password=3-5KUWZlPnC4
+
+# Mongo server port.
+spring.data.mongodb.port=${OPENSHIFT_MONGODB_DB_PORT}
+
+# Authentication database name.
+spring.data.mongodb.database=shop
+
+# Enable Mongo repositories.
+spring.data.mongodb.repositories.enabled=true
+
+
+# Mongo database URI. When set, host and port are ignored.
+#spring.data.mongodb.uri=mongodb://admin:3-5KUWZlPnC4@${OPENSHIFT_MONGODB_DB_HOST}:${OPENSHIFT_MONGODB_DB_PORT}/
+
+spring.data.mongodb.authentication-database=admin
 # Database name.
 
 #AOP
