--- a/pom.xml
+++ b/pom.xml
@@ -110,12 +110,12 @@
       <artifactId>jackson-databind</artifactId>
     </dependency>
     <!-- http://mvnrepository.com/artifact/org.springframework/spring-test -->
-    <!--<dependency>-->
-      <!--<groupId>org.springframework</groupId>-->
-      <!--<artifactId>spring-test</artifactId>-->
-      <!--<version>${spring.test.framework}</version>-->
-      <!--<scope>test</scope>-->
-    <!--</dependency>-->
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-test</artifactId>
+      <version>${spring.test.framework}</version>
+      <scope>test</scope>
+    </dependency>
     <!-- http://mvnrepository.com/artifact/org.springframework.security/spring-security-test -->
     <dependency>
       <groupId>org.springframework.security</groupId>
