--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
-    <version>2.0.0.M2</version>
+    <version>2.0.0.M3</version>
   </parent>
   <repositories>
     <repository>
@@ -157,6 +157,10 @@
       <scope>compile</scope>
     </dependency>
 
+    <dependency>
+      <groupId>de.flapdoodle.embed</groupId>
+      <artifactId>de.flapdoodle.embed.mongo</artifactId>
+    </dependency>
 
   </dependencies>
   <profiles>
