--- a/pom.xml
+++ b/pom.xml
@@ -160,6 +160,7 @@
     <dependency>
       <groupId>de.flapdoodle.embed</groupId>
       <artifactId>de.flapdoodle.embed.mongo</artifactId>
+      <scope>test</scope>
     </dependency>
 
   </dependencies>
