Added the mlab Config and created a test profile and a local profile

--- a/src/main/resources/application-mlab.yaml
+++ b/src/main/resources/application-mlab.yaml
@@ -9,9 +9,12 @@ spring:
         proxy-target-class: true
     data:
         mongodb:
+#            authentication-database: reflex
             database: shop
-            host: 127.0.0.1
-            port: 27017
+            host: ds255787.mlab.com
+            username: shopadmin
+            password: testing123
+            port: 55787
             repositories:
                 enabled: true
     jpa:
