--- a/package.json
+++ b/package.json
@@ -19,11 +19,12 @@
     "@angular/animations": "^5.0.0",
     "@angular/common": "^5.0.0",
     "@angular/compiler": "^5.0.0",
-    "@angular/http": "^5.0.0",
+    "@angular/core": "^5.2.0",
     "@angular/forms": "^5.0.0",
+    "@angular/http": "^5.0.0",
     "@angular/material": "^5.0.0-rc0",
-    "@angular/platform-browser-dynamic": "^5.0.0",
     "@angular/platform-browser": "^5.0.0",
+    "@angular/platform-browser-dynamic": "^5.0.0",
     "@angular/router": "^5.0.0",
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
