--- a/pom.xml
+++ b/pom.xml
@@ -22,25 +22,25 @@
     <npmVersion>3.10.10</npmVersion>
     <frontEndPluginVersion>1.3</frontEndPluginVersion>
 
-    <spring.test.framework>4.3.8.RELEASE</spring.test.framework>
+    <spring.test.framework>5.0.2.RELEASE</spring.test.framework>
   </properties>
 
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
-    <version>2.0.0.M3</version>
+    <version>2.0.0.M7</version>
   </parent>
   <repositories>
-    <repository>
-      <id>eap</id>
-      <url>http://maven.repository.redhat.com/techpreview/all</url>
-      <releases>
-        <enabled>true</enabled>
-      </releases>
-      <snapshots>
-        <enabled>true</enabled>
-      </snapshots>
-    </repository>
+    <!--<repository>-->
+    <!--<id>eap</id>-->
+    <!--<url>http://maven.repository.redhat.com/techpreview/all</url>-->
+    <!--<releases>-->
+    <!--<enabled>true</enabled>-->
+    <!--</releases>-->
+    <!--<snapshots>-->
+    <!--<enabled>true</enabled>-->
+    <!--</snapshots>-->
+    <!--</repository>-->
     <repository>
       <id>spring-releases</id>
       <url>https://repo.spring.io/libs-release</url>
@@ -55,16 +55,16 @@
     </repository>
   </repositories>
   <pluginRepositories>
-    <pluginRepository>
-      <id>eap</id>
-      <url>http://maven.repository.redhat.com/techpreview/all</url>
-      <releases>
-        <enabled>true</enabled>
-      </releases>
-      <snapshots>
-        <enabled>true</enabled>
-      </snapshots>
-    </pluginRepository>
+    <!--<pluginRepository>-->
+    <!--<id>eap</id>-->
+    <!--<url>http://maven.repository.redhat.com/techpreview/all</url>-->
+    <!--<releases>-->
+    <!--<enabled>true</enabled>-->
+    <!--</releases>-->
+    <!--<snapshots>-->
+    <!--<enabled>true</enabled>-->
+    <!--</snapshots>-->
+    <!--</pluginRepository>-->
     <pluginRepository>
       <id>spring-releases</id>
       <url>https://repo.spring.io/libs-release</url>
@@ -128,7 +128,7 @@
     <dependency>
       <groupId>org.springframework.security</groupId>
       <artifactId>spring-security-test</artifactId>
-      <version>4.1.0.RELEASE</version>
+      <version>5.0.0.RELEASE</version>
       <scope>test</scope>
     </dependency>
 
@@ -141,19 +141,19 @@
     <dependency>
       <groupId>com.jayway.jsonpath</groupId>
       <artifactId>json-path</artifactId>
-      <version>2.2.0</version>
+      <version>2.4.0</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>io.springfox</groupId>
       <artifactId>springfox-swagger-ui</artifactId>
-      <version>2.2.2</version>
+      <version>2.7.0</version>
       <scope>compile</scope>
     </dependency>
     <dependency>
       <groupId>io.springfox</groupId>
       <artifactId>springfox-swagger2</artifactId>
-      <version>2.2.2</version>
+      <version>2.7.0</version>
       <scope>compile</scope>
     </dependency>
 
@@ -161,6 +161,12 @@
       <groupId>de.flapdoodle.embed</groupId>
       <artifactId>de.flapdoodle.embed.mongo</artifactId>
       <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.security</groupId>
+      <artifactId>spring-security-config</artifactId>
+      <version>5.0.0.RELEASE</version>
+
     </dependency>
 
   </dependencies>
