--- a/pom.xml
+++ b/pom.xml
@@ -105,11 +105,11 @@
       <scope>compile</scope>
     </dependency>
 
-    <!--<dependency>-->
-    <!--<groupId>de.flapdoodle.embed</groupId>-->
-    <!--<artifactId>de.flapdoodle.embed.mongo</artifactId>-->
-    <!--<scope>test</scope>-->
-    <!--</dependency>-->
+    <dependency>
+    <groupId>de.flapdoodle.embed</groupId>
+    <artifactId>de.flapdoodle.embed.mongo</artifactId>
+    <scope>test</scope>
+    </dependency>
     <dependency>
       <groupId>org.springframework.security</groupId>
       <artifactId>spring-security-config</artifactId>
